bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value getIndication
while (getIndication()!= "") {if (readMessage() == "R") {right();
       ^